created client and feature toggle

--- a/FirstWiremock/appsettings.Development.json
+++ b/FirstWiremock/appsettings.Development.json
@@ -5,5 +5,7 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "FeatureToggle": true,
+  "Url": "http://localhost:7070"
 }
